--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 ###############################################
 ##### Pipeline Gitlab-CI - v1.0           #####
 ##### MATTEC PROJETOS  - 08/10/2023       #####
-##### GRUPO 44 NETPLIP VIDEOS SFIAP       #####
+##### GRUPO 44 NETPLIPS VIDEOS FIAP       #####
 ###############################################
 
 
